--- a/client/src/app/views/assertions/assertions-home/assertions-home.page.html
+++ b/client/src/app/views/assertions/assertions-home/assertions-home.page.html
@@ -12,16 +12,50 @@
 </ng-template>
 
 <nz-page-header class="site-page-header">
-  <nz-page-header-title>
-    <i nz-icon
-      nzType="civic:assertion"></i> Assertions
-  </nz-page-header-title>
-
   <nz-page-header-content>
+    <nz-row class="header-content">
+      <nz-col nzFlex="64px"
+        class="header-icon">
+        <i nz-icon
+          nzType="civic:assertion"></i>
+      </nz-col>
+      <nz-col nzFlex="600px"
+        class="header-description">
+        <h2>Assertions</h2>
+        <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="2">A CIViC Assertion summarizes a collection of Evidence Items that cover predictive/therapeutic, diagnostic, prognostic or predisposing clinical information for a variant in a specific cancer context.</p>
+      </nz-col>
+      <nz-col nzFlex="auto"
+        class="header-links">
+        <nz-space nzDirection="vertical" class="docs-buttons">
+          <a nz-button
+            href="https://civic.readthedocs.io/en/latest/model/assertions.html"
+            target="_blank"
+            nzSize="small"
+            nzBlock
+            *nzSpaceItem>
+            <i nz-icon
+              nzType="link"
+              nzTheme="outline"></i>
+            View Assertion Model Docs
+        </a>
+          <a nz-button
+            href="https://civic.readthedocs.io/en/latest/curating/assertions.html"
+            target="_blank"
+            nzSize="small"
+            nzBlock
+            *nzSpaceItem>
+            <i nz-icon
+              nzType="link"
+              nzTheme="outline"></i>
+            View Assertion Curation Docs
+        </a>
+        </nz-space>
+      </nz-col>
+    </nz-row>
     <nz-row>
       <nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-assertions-table cvcTitle="Browse Assertions"></cvc-assertions-table>
+          <cvc-assertions-table cvcTitle="Browse All Assertions"></cvc-assertions-table>
         </div>
       </nz-col>
     </nz-row>
