updated phenotypes table, home page

--- a/client/src/app/components/phenotypes/phenotypes-table/phenotypes-table.component.html
+++ b/client/src/app/components/phenotypes/phenotypes-table/phenotypes-table.component.html
@@ -1,5 +1,6 @@
 <nz-card [nzTitle]="titleTemplate">
   <nz-table #phenotypesTable
+    nzSize="small"
     [nzData]="(phenotypes$ | ngrxPush)"
     [nzLoading]="(isLoading$ | ngrxPush)"
     [nzFrontPagination]="false"
