--- a/client/src/app/components/phenotypes/phenotypes-table/phenotypes-table.component.less
+++ b/client/src/app/components/phenotypes/phenotypes-table/phenotypes-table.component.less
@@ -1,1 +1,5 @@
-@import 'themes/overrides/entity-page-header.overrides.less';
+@import "themes/overrides/card-table.overrides.less";
+
+:host {
+  display: block;
+}
