updated curation activity page

--- a/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
+++ b/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
@@ -1,5 +1,6 @@
 <nz-card [nzTitle]="titleTemplate">
   <nz-table #variantTypesTable
+    nzSize="small"
     [nzData]="(variantTypes$ | ngrxPush)"
     [nzLoading]="(isLoading$ | ngrxPush)"
     [nzFrontPagination]="false"
