--- a/client/src/app/views/sources/sources-home/sources-home.page.html
+++ b/client/src/app/views/sources/sources-home/sources-home.page.html
@@ -23,7 +23,7 @@
       </nz-col>
       <nz-col nzFlex="600px"
         class="header-description">
-        <h2>Associated Sources</h2>
+        <h2>Sources</h2>
         <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="2">
           Each Evidence Item is associated with a Source which supports the Item's clinical claims. CIViC accepts publications known to PubMed or abstracts published through the American Society of Clinical Oncology.
         </p>
@@ -40,7 +40,7 @@
             <i nz-icon
               nzType="link"
               nzTheme="outline"></i>
-            View Associated Source Docs
+            View Source Docs
         </a>
           <a nz-button
             href="https://civic.readthedocs.io/en/latest/model/evidence/source.html#curating-source"
