updated curation queues view, source-suggestion table

--- a/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
+++ b/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
@@ -1,6 +1,7 @@
 <nz-card [nzTitle]="titleTemplate">
   <ng-container  *ngrxLet="viewer$ as viewer">
     <nz-table #sourceSuggestionsTable
+      nzSize="small"
       [nzData]="(sourceSuggestions$ | ngrxPush)"
       [nzLoading]="(isLoading$ | ngrxPush)"
       [nzFrontPagination]="false"
