--- a/client/src/app/views/curation/curation-queues/curation-queues.view.html
+++ b/client/src/app/views/curation/curation-queues/curation-queues.view.html
@@ -2,21 +2,37 @@
 </cvc-section-navigation>
 
 <nz-page-header class="site-page-header">
-
-  <!-- title -->
-  <nz-page-header-title>
-    <i nz-icon nzType="file-add"></i>
-    Curation Queues
-  </nz-page-header-title>
-
-
-  <!-- header action btns, actions menu -->
-  <nz-page-header-extra></nz-page-header-extra>
-
   <nz-page-header-content>
-    <cvc-tab-navigation [tabs]="this.tabs"> </cvc-tab-navigation>
-    <div class="content">
-      <router-outlet></router-outlet>
-    </div>
+    <!-- title, description, docs links -->
+    <nz-row class="header-content">
+      <nz-col nzFlex="64px"
+        class="header-icon">
+        <i nz-icon
+          nzType="file-add"></i>
+      </nz-col>
+      <nz-col nzFlex="600px"
+        class="header-description">
+        <h2>Curation Queues</h2>
+        <p nz-typography
+          nzEllipsis
+          nzExpandable
+          [nzEllipsisRows]="2">New submitted Evidence, Assertions, and Source Suggestions must be accepted by a CIViC Editor. These Curation Queues list items in need of Editor moderation.</p>
+      </nz-col>
+      <nz-col nzFlex="auto"
+        class="header-links">
+      </nz-col>
+    </nz-row>
+    <nz-row>
+      <nz-col [nzSpan]="24">
+        <cvc-tab-navigation [tabs]="this.tabs"> </cvc-tab-navigation>
+      </nz-col>
+    </nz-row>
+    <nz-row>
+      <nz-col [nzSpan]="24">
+        <div class="content">
+          <router-outlet></router-outlet>
+        </div>
+      </nz-col>
+    </nz-row>
   </nz-page-header-content>
 </nz-page-header>
