fixed variant-group header

--- a/client/src/app/views/variant-groups/variant-groups-home/variant-groups-home.page.html
+++ b/client/src/app/views/variant-groups/variant-groups-home/variant-groups-home.page.html
@@ -18,18 +18,18 @@
       <nz-col nzFlex="64px"
         class="header-icon">
         <i nz-icon
-          nzType="civic:evidence"></i>
+          nzType="civic:variantgroup"></i>
       </nz-col>
       <nz-col nzFlex="600px"
         class="header-description">
-        <h2>Evidence Items</h2>
-        <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="2">The clinical evidence statement is a piece of information that has been manually curated from trustable medical literature about a variant or genomic ‘event’ that has implications in cancer predisposition, diagnosis (aka molecular classification), prognosis, or predictive response to therapy.</p>
+        <h2>Variant Groups</h2>
+        <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="2">Variant Groups provide user-defined grouping of Variants within and between genes based on unifying characteristics.</p>
       </nz-col>
       <nz-col nzFlex="auto"
         class="header-links">
         <nz-space nzDirection="vertical" class="docs-buttons">
           <a nz-button
-            href="https://civic.readthedocs.io/en/latest/model/evidence.html"
+            href="https://civic.readthedocs.io/en/latest/model/variant_groups.html"
             target="_blank"
             nzSize="small"
             nzBlock
@@ -37,18 +37,18 @@
             <i nz-icon
               nzType="link"
               nzTheme="outline"></i>
-            View Evidence Model Docs
+            View Variant Group Model Docs
         </a>
-          <a nz-button
-            href="https://civic.readthedocs.io/en/latest/curating/evidence.html"
-            target="_blank"
-            nzSize="small"
-            nzBlock
-            *nzSpaceItem>
+        <a nz-button
+          href="https://civic.readthedocs.io/en/latest/model/variant_groups.html#curating-variant-groups"
+          target="_blank"
+          nzSize="small"
+          nzBlock
+          *nzSpaceItem>
             <i nz-icon
               nzType="link"
               nzTheme="outline"></i>
-            View Evidence Curation Docs
+            View Variant Group Curation Docs
         </a>
         </nz-space>
       </nz-col>
