--- a/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
+++ b/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
@@ -150,9 +150,10 @@
           </td>
           <td *ngIf="viewer.signedIn">
             <nz-button-group>
-              <button [disabled]="suggestion.status != status.New" 
+              <!-- <button [disabled]="suggestion.status != status.New"  -->
+              <button [disabled]="true"
                 nz-button nzSize="small" 
-                nz-tooltip nzTooltipTitle="Curate an Evidence Item from this Source Suggestion" >
+                nz-tooltip nzTooltipTitle="(Coming Soon) Curate an Evidence Item from this Source Suggestion" >
                 <i nz-icon nzType="plus"></i>
               </button>
               <button 
